maybe fixed footnote problem

--- a/content/post/2020-09-28-week-2.md
+++ b/content/post/2020-09-28-week-2.md
@@ -12,7 +12,7 @@ images = [
 ]
 +++
 
-> "As scholars, we cannot ignore the reality that, just because this data is in the public arena, it is also open and free to use, and that permission has been granted for its harvesting, analysis and dissemination."<sup>1</sup>
+> "As scholars, we cannot ignore the reality that, just because this data is in the public arena, it is also open and free to use, and that permission has been granted for its harvesting, analysis and dissemination."<sup>1<sup>
 
 At the beginning of the week, my qualms were in the realm of ethics, but now as I'm writing this having completed the majority of my field work, they are entirely physical...
 
