--- a/content/post/2020-10-04-week-3.md
+++ b/content/post/2020-10-04-week-3.md
@@ -12,7 +12,7 @@ images = [
 ]
 +++
 
-> "Connectedness to our own humanity, reexivity toward our own emo-tional states, and an extension of human compassion that transcends time much as it transcends cultural divides in the present all make possible a different kind of archaeology where emotion is integral to the human experience past and present."<sup>1</sup>
+> "Connectedness to our own humanity, reexivity toward our own emo-tional states, and an extension of human compassion that transcends time much as it transcends cultural divides in the present all make possible a different kind of archaeology where emotion is integral to the human experience past and present."<sup>1<sup>
 
 Update: Who knew sun poisoning could take 3 whole days to recover from? Dehydration doesn't mess around-- my brain was mush and only reformed on Wednesday, which meant that this whole week was a game of catch-up and frankly, ended up being a bit of a fail.
 
