--- a/content/post/2020-10-21-week-5.md
+++ b/content/post/2020-10-21-week-5.md
@@ -12,7 +12,7 @@ images = [
 ]
 +++
 
-> "Historically, counting and classification have been used to dominate, discipline, and exclude."<sup>1</sup>
+> "Historically, counting and classification have been used to dominate, discipline, and exclude."<sup>1<sup>
 
 This week (or should I say last week?), I think I was left with more questions than answers. Maybe because I didn't have enough time to stew on everything I did thanks to pre-reading week assignments, but I'd like to think that it's because my brain is working on trying to grasp a concept beyond my knowledge, and is waiting to learn more.
 
