--- a/content/post/2020-10-27-week-6.md
+++ b/content/post/2020-10-27-week-6.md
@@ -12,7 +12,7 @@ images = [
 ]
 +++
 
-> "This approach enables a workflow where interpretive decisions can be delayed to a later phase of the project because the material uncovered by the excavation and the record produced by the individual excavator is seen as impartial and atheoretical." <sup>1</sup>
+> "This approach enables a workflow where interpretive decisions can be delayed to a later phase of the project because the material uncovered by the excavation and the record produced by the individual excavator is seen as impartial and atheoretical." <sup>1<sup>
 
 I don't think I've ever analyzed a topic model made from a larger dataset than [this](https://shawngraham.github.io/archae-topic-models/20000/#) before and I have to say, while it's incredibly informative and great for putting such a significant corpus into perspective, it's also pretty fun to click around and explore to understand the mechanism behind it. For example, Topic 39 is just a grouping of German words. This is likely because most of the journals downloaded were in English, and so phonetically it makes sense that these words were matched then made a singular topic, but it's nice to know that the program used to create these topic models knows just about as much about what the German word actually means as I do.
 
