--- a/content/post/2020-11-10-week-7.md
+++ b/content/post/2020-11-10-week-7.md
@@ -26,4 +26,4 @@ I can think of funny ways that a technology such as GPT-2 could be applied-- I'm
 
 This week's readings and activities coupled with having to reflect on the entirety of my education in relation to digital humanities while writing personal statements made me really think about *how* these tools came to be used, and how that can go hand-in-hand with the lenses of understanding they create. As I observed with GPT-2 and as [Morgan delves deeper into in her article on cyborg archaeology](https://www.cambridge.org/core/journals/european-journal-of-archaeology/article/avatars-monsters-and-machines-a-cyborg-archaeology/CD467A5E5232B50D6CAA4D72091FCFA9/core-reader), although they can be excellent tools for analysis and teaching archaeological methods, these technologies can also often blur the lines between fact and fiction. Further, there is also the risk that every article we read addressed this week, which is the trap of becoming engrossed in the digital and, by relying on it, important archaeological findings may be glossed over and ethics left unconsidered. While I felt her article tended to illustrate extremes about digital archaeology, [Kersel's article](https://digitalpressatund.files.wordpress.com/2016/09/5_1_kersel.pdf) greatly illustrated the risks of making fieldwork a heavily digitized practice. There is not only risks of technology failing, but a loss of the "human" element of archaeology. "I often run my hands over features as I set up tapes" and "I worry that in our preoccupation with a paperless life we might overlook the legacy of paper and a closer connection" are just two of the instances in which Kersel debates how the distancing the archaeologist from their work may result also in a distance from their ability to find and interpret meaningful details. Situated between a stereotype of the digital archaeologist who forgets the humanity in their work, and Kersel, who fears this occurrence as technology becomes increasingly included in the wider practice of archaeology, is a medium that must be sought out where digital tools and methodologies can be used for the macroscopic lense they provide, alongside the more microscopic lense that humans tend to have which can not only be used for analysis, but also to recognize the limitations and consider the ethical implications of these technologies, and thus perhaps even see the sliver of humanity they contain, given to them by through the biases of their creators.
 
-<sup>1<sup> Kersel, Morag. 2016. [‘Living a Semi-digital Kinda Life’](https://digitalpressatund.files.wordpress.com/2016/09/5_1_kersel.pdf) in Erin Walcek Averett, Jody Michael Gordon, and Derek B. Counts (eds) Mobilizing the Past for a Digital Future: The Potential of Digital Archaeology. Grand Forks: The Digital Press at the University of North Dakota. pp. 475-492.
+<sup>1</sup> Kersel, Morag. 2016. [‘Living a Semi-digital Kinda Life’](https://digitalpressatund.files.wordpress.com/2016/09/5_1_kersel.pdf) in Erin Walcek Averett, Jody Michael Gordon, and Derek B. Counts (eds) Mobilizing the Past for a Digital Future: The Potential of Digital Archaeology. Grand Forks: The Digital Press at the University of North Dakota. pp. 475-492.
