--- a/content/post/2020-09-13-week-1.md
+++ b/content/post/2020-09-13-week-1.md
@@ -12,7 +12,7 @@ images = [
 ]
 +++
 
-> "Digital archaeology of the 21st century is necessarily a public archaeology." <sup>1</sup>
+> "Digital archaeology of the 21st century is necessarily a public archaeology." <sup>1<sup>
 
 Note: I submitted this first weekly journal for HIST3000: Digital Archaeology with a note attached addressed to my professor and TA, stating that I would only post our larger consolidation documents on this blog. I lied. Turns out I *enjoy* writing much more when given the freedom of informality.
 
