--- a/content/post/2020-06-08-week-five.md
+++ b/content/post/2020-06-08-week-five.md
@@ -41,7 +41,7 @@ Now, what I'm used to making is event posters-- I'm not entirely sure if I've lo
 
 I read through Purrington's notes and went to start the activity using the suggested Sangiorgi/Breuer designs, but a problem came up which was that I strongly disliked both of the given designs. Overall, I find both to be too "scientific"-- the designs don't capture the creativity of work in the humanities. They were clearly geared towards supporting lots of equations and visualizations of data, which may work for digital history, but since we were told make an academic poster for our favourite essay, and I have none that employed digital history devices, these designs felt irrelevant to me. A smaller note too was that, while I generally agree with Breuer's note on colour, I strongly disagree with his notion that posters **shouldn't** use flat colour. I KNEW his poster design was from ten years ago; at this point in time, gradients date his work while not adding much visual interest. Flat colour is fine for modern more minimalist design, and visual interest is generated numerous other ways, such as using contrasting palettes, by creating shadows for boxes, using small patterns for backgrounds with no text and translucent boxes for titles, etc. So that was basically a long way of me saying that rather than using a template, I referenced Purrington's notes for horizontal posters to make my own design. For consistency, because I mentioned it last week, I made the poster for my essay on the 19th century British perception of the waist.
 
-{{< figure src="/images/academicposter.pdf" class="respo-posts" >}}
+{{< figure src="/images/academicposter.png" class="respo-posts" >}}
 
 Ta-da! If you really want to read it, you'll have to zoom in, but this was the result of my efforts. It's... pretty boring. There were no visuals for this essay, so I tried to make use of the Golden Ratio and dedicate a section to a group of cascading fashion plates, sorted from smallest to "largest" waistline. I felt it was a relevant visual, especially after someone reads the poster, and frankly, I needed something to ensure that this poster wouldn't just be blocks of text. And yet... it's still such a boring poster to me! There's so much text! I also think I should have used a more diverse colour palette rather than a single-hue one, It may have made all that text stand out more. This type of poster is definitely challenging for conveying a work that has no visual outcome or byproducts. It left me wondering, what IS the best way to "advertise" something like my essay? I still haven't come up with an answer...
 
