--- a/content/post/2020-11-22-week-9.md
+++ b/content/post/2020-11-22-week-9.md
@@ -27,4 +27,4 @@ The first thing that I discovered proving my initial thoughts on this topic wron
 
 My starting belief that the data contained in a database such as this would be clean, structured, and easy to use was undoubtedly proven to be untrue. ADS is an invaluable resource that gives huge amounts of data that would otherwise likely remain out of public eye a platform to be publically accessed and analyzed, which speaks to how scholarship could be strengthened if research materials are more openly available to use. Yet the catalogue remains scattered in how it organizes and regulates its massive collections, where data is placed, and what data must be included. It was actually stated in the introduction to the "Imported Material in Atlantic Britain and Ireland c.AD400-800" database that it is crucial for a user to read the user guide before working with their data to prevent misinterpretation and misuse, yet the guide was inexplicably inaccessible. Further, navigation of the database is hindered by a lack of consistency in metadata and a search structure that is unable to support the complexities of each database that the site hosts. Open data can and will continue to be used in this field, and it should be, because its all we have, but we also must consider the potential for harm when there are no standards widely put in place, and make creating this needed structure a priority so that the knowledge formed from these sources situate the data in any context necessary to prevent misrepresentation and false claims of indisputable conclusions.
 
-<sup>1<sup> Ben Marwick, Carl Boettiger & Lincoln Mullen. 2018. [Packaging Data Analytical Work Reproducibly Using R (and Friends)](http://faculty.washington.edu/bmarwick/PDFs/Marwick-Boettiger-Mullen-2018-TAS-research-compendia.pdf), The American Statistician, 72:1, 80-88.
+<sup>1</sup> Ben Marwick, Carl Boettiger & Lincoln Mullen. 2018. [Packaging Data Analytical Work Reproducibly Using R (and Friends)](http://faculty.washington.edu/bmarwick/PDFs/Marwick-Boettiger-Mullen-2018-TAS-research-compendia.pdf), The American Statistician, 72:1, 80-88.
