--- a/content/post/2020-12-07-week-11.md
+++ b/content/post/2020-12-07-week-11.md
@@ -33,7 +33,7 @@ The headstone models themselves were not unique, but each headstone had the form
 
  We found another uncovered grave at Mère-Lachaiselongue, but this time there was no option to read the inscription and a significant amount of riches had been left behind, so either this grave was in such an "open" state because of weathering or whoever uncovered it was looking for something specific... I haven't got far enough into this storyline to know if there's any significance, so I don't actually know the answer to this. I also don't know why all of the presumably female statues featured at the heads of tombs were always missing their torsos:
 
- {{< figure src="/images/hv.jpg" class="respo-posts" >}}
+ {{< figure src="/images/ht.jpg" class="respo-posts" >}}
 
 A misogynistic monster? A vengeful mason who didn't get paid? Life is full of mysteries.
 
@@ -60,11 +60,15 @@ Right off the bat, the arrangement didn't sound terrible-- in my notes, I descri
 
 What was created, in my opinion, sounds like a song from the soundtrack of a Professor Layton game:
 
+
 {{< audio src="/audio/graveyardgranduer(harp).mp3" title="Graveyard Grandeur (Normal Variant)" >}}
+
 
 Alternatively, at one point I accidentally changed height from being represented by a harp to an oscillator, and produced a slightly more nightmare-ish version:
 
+
 {{< audio src="/audio/graveyardgranduer(ocsi).mp3" title="Graveyard Grandeur (Nightmare Variant)" >}}
+
 
 So, what do you hear?
 
