--- a/content/post/2020-12-07-week-11.md
+++ b/content/post/2020-12-07-week-11.md
@@ -61,7 +61,7 @@ Right off the bat, the arrangement didn't sound terrible-- in my notes, I descri
 What was created, in my opinion, sounds like a song from the soundtrack of a Professor Layton game:
 
 
-{{< audio src="/audio/graveyardgranduer(ocsi).mp3" title="Graveyard Grandeur (Nightmare Variant)" >}}
+{{< audio src="/audio/graveyardgranduer(harp).mp3" title="Graveyard Grandeur (Nightmare Variant)" >}}
 
 
 Alternatively, at one point I accidentally changed height from being represented by a harp to an oscillator, and produced a slightly more nightmare-ish version:
