--- a/content/post/2020-12-07-week-11.md
+++ b/content/post/2020-12-07-week-11.md
@@ -12,7 +12,7 @@ images = [
 ]
 +++
 
-> "We are literally atop untold histories: things, ideas, lives, and activities that we have never seen before, that we may know nothing of, and that can thus endlessly surprise and transform us."
+> "We are literally atop untold histories: things, ideas, lives, and activities that we have never seen before, that we may know nothing of, and that can thus endlessly surprise and transform us."<sup>1<sup>
 
 This final "work" week in Digital Archaeology was collaborative in ways I never anticipated. Specifically, I discovered that my "gamer" skill set only goes about as far as Stardew Valley ([which also has *some* element of archaeology](https://stardewvalleywiki.com/Artifacts), however questionable it may be-- but that's a different story), and I had to ask my partner to play *The Witcher 3: Wild Hunt* for me because I kept getting killed before actually reaching any cemeteries. While my actual attempt at playing the game was a fail, in the end, getting to watch was a win because it meant I could take notes as observations happened! It was also a win for my partner, who enjoyed using the fact that he *had* to play a video game for me as an excuse to avoid his actual work.
 
@@ -75,3 +75,5 @@ So, what do you hear?
 I found that, despite my previous doubts, you can of course finding meaning from sonification. The consistent "hammering" of the glockenspiel tells me that quotes have consistently been a feature of headstones across the centuries. Additionally, the sound as a whole was fairly consistent, proving my initial thought the decoration would increase over time, wrong.
 
 Now, there are some flaws in this data, the most significant one being that for the track to be truly accurate to the timeline, it would actually have to end after 2:01. There were a number of graves that did not have a date of creation included in their data, therefore when I sorted the data, all 46 of these points were pushed to the end. Additionally, I'm still not sure how I feel about the process of sonifying data-- this was by far the most "artistic" interpretation of data I've done with many choices made about it that came down to personal taste. My influence on this data is explicit, but then, who says this always has to be a bad thing? Although getting creative with archaeological data can run the risk of misinterpretation when some intricacies may have to be altered or removed in the process of making the data usable, if the overall message can be conveyed to those engaging with the output, is this so bad? With explicit details given on the process of creation, such as what I just described with my foray into sonification, not only can [Perry's concept](https://digiarch.netlify.app/data/Perry2019_Enchantment_AcceptedMS.pdf) of archaeological enchantment be experience by the archaeologists who get to experiment with these creative ways of interpreting their findings, but by the public as well, who get to learn about their past in ways they never fathomed to be possible.
+
+<sup>1</sup> Perry, Sara. 2019. [The Enchantment of the Archaeological Record](https://digiarch.netlify.app/data/Perry2019_Enchantment_AcceptedMS.pdf). European Journal of Archaeology. 22.3, 354-371.
