exit ticket round 2

--- a/content/post/2020-10-04-week-3.md
+++ b/content/post/2020-10-04-week-3.md
@@ -26,7 +26,7 @@ I processed through these emotions as I processed and recorded each picture, and
 
 The next battle with technology was partially one of my own error. This week, the only activity I was truly able to do was webmapping. I've been excited about trying photogrammetry since I first saw it on the course site! But guess who forgot to take overlapping pictures? Hint: it's me. I had 4 relatively good photos of one monument that I attempted to make a model out of, but sketchfab didn't like the size of the pictures and neither Meshroom nor Regard3D liked how few pictures I had; I think next week I'll try manually building the monument when I have more time to learn about Regard3D. The intro to spatial archaeology I simply ran out of time for, but I'd like to give it a shot in the future as I feel it will put the somewhat complex discussions of [Gupta and Devillers](https://core.ac.uk/download/pdf/77997647.pdf) into greater context.
 
-Although I did the initial webmapping activity in HIST3814, I opted to redo it as a refresher and it yielded some interesting results, as you can see in this week's header photo. I attempted to warp [one of the earliest maps I could find featuring Ottawa](https://www.bac-lac.gc.ca/eng/CollectionSearch/Pages/record.aspx?app=FonAndCol&IdNumber=3844835), which happened to be a hand-drawn map from 1828. Finding control points when warping it in Mapwarper was actually surprisingly easy-- despite not being able to read the written labels, the significant geographic markers such as islands, rivers, and bays were drawn much more true-to-life than I anticipated. Yet when I finally warped the image, the map became a testament to scaling. The historic map imagined an area that was much more spaced out and expansive than what our current map produced by satellites reveals. I wondered if this was available because of modes of transportation avaliable in the early 19th century; if a person took multiple days to traverse an area that would now take us about an hour to traverse by car, it would certainly be perceived as more vast area than it actually may be.
+Although I did the initial webmapping activity in HIST3814, I opted to redo it as a refresher and it yielded some interesting results, as you can see in this week's header photo. I attempted to warp [one of the earliest maps I could find featuring Ottawa](https://www.bac-lac.gc.ca/eng/CollectionSearch/Pages/record.aspx?app=FonAndCol&IdNumber=3844835), which happened to be a hand-drawn map from 1828. Finding control points when warping it in Mapwarper was actually surprisingly easy-- despite not being able to read the written labels, the significant geographic markers such as islands, rivers, and bays were drawn much more true-to-life than I anticipated. Yet when I finally warped the image, the map became a testament to scaling. The historic map imagined an area that was much more spaced out and expansive than what our current map produced by satellites reveals. I wondered if this was due to the modes of transportation available in the early 19th century; if a person took multiple days to traverse an area that would now take us about an hour to traverse by car, it would certainly be perceived as more vast area than it actually may be.
 
 When mapping Old St.Mary's cemetery I couldn't locate a map of its layout to overlay it, but once all the markers were placed I realized that it's almost necessary that I do, because the stamen maps do not scale to the level I need-- the points of each grave are floating in a grey liminal space between a digital void and the cemetery actually present at those coordinates. This sort of made me question the inherent authority people place on digital works. This map *does* have accurate coordinates, let me be clear, but if someone saw this map they would likely trust that yes, this map *is* accurate. Yet, no geography is present; there are no indications of the graves besides the added points, and nothing to confirm the larger locale because of the loss of imagery due to scale. I could have placed this site *anywhere* and it may be taken at face value; the limits of this technology can allow for misinformation and misrepresentation that may go undetected, and further, on an emotional level, it would misplace the dead and leave them lost and misremembered.
 
