--- a/content/post/2020-11-15-week-8.md
+++ b/content/post/2020-11-15-week-8.md
@@ -18,4 +18,4 @@ Broadly, my work in digital humanities has helped me with analysis of work "at l
 
 I initially couldn't think of a win after this realization, honestly, everything felt basic after having essentially unravelled my mind's entangled methodological conflicts; but, in looking beyond the scope of this course, I discovered how the topics discussed in this module have impacted other areas of my work. Between writing the notes for this post and now, I've been working on an assignment for another class in which I have to analyze [The Survey of Scottish Witchcraft](http://www.shca.ed.ac.uk/Research/witches/). Although this assignment is for a class not specifically about digital humanities, hence the analysis is meant to be on the content of the database, I still found myself looking at how the data was collected, how those who created it interpreted this, and how this affected the patterns I found myself. The data points within the database had been compiled by referencing a number of textual artefacts from early modern Scottish history but some entries also included interpretations and notes on trials by the historians who worked on the project, which made me consider how impartial the data being represented may be considering their notes were placed in between lines of what was meant to be though of as fact. Further, when reading about the database and its included histories of Scottish witchcraft, the data and this public representation of it almost felt secondary to these writings about what the creators found-- at one point when discussing how the database could be used, if a user desired more information on a specific entry than they felt the entry gave them, rather than having digitized then linked the primary source referenced so the user could interpret this data for themselves, the author states, "At this point, you probably need to read a book." This simultaneous use of digital methods while also being critical of digital practices took me back to the [Kersel article](https://digitalpressatund.files.wordpress.com/2016/09/5_1_kersel.pdf) which discusses anxieties about relying solely on the digital to collect data and what might be missing in doing so, although in this case, it seems that the creators of the database concerned about the inaccurate exposition of the data rather than the loss of humanity in archaeology.
 
-Fundamentally, although what I was considering at the end of module 1 segued well into module 2, what I believe the implications for "doing" digital archaeology have of coursed now changed. "Doing" this form of work requires a shift in mindset that I haven't experience elsewhere and that I now realize I must continue to work at expanding-- critical thought and consideration for not only the topic but the tools being used to analyze it must be thought about as a part of every step when collecting data and attempting to find the hidden patterns within. The practice of "slow archaeology" as introduced in the Wilkins article is essential for this to allow for interpretation throughout the continuously present pipeline model of archaeological knowledge creation. When one focuses too heavily on the aspects of digital collection, processing what is collected, and how this will be outputted rather than what can be interpreted from each of these steps, patterns can be found yet they become less meaningful without such critical thought behind the discovery. In his article, [Huggett](https://intarch.ac.uk/journal/issue44/7/index.html) explains that "the ubiquity of digital devices within archaeology makes it important to study and understand their integration into archaeological practice," and this, in particular, aligns itself with my concluding thoughts this week. His proposed concept of cognitive artefacts speak to my original discussion on the agency and power which the archaeologist holds over the data they collect and create, yet it also flows into my newfound understandings of how the digital ecosystem being formed in the field of archaeology impacts our findings as we seek new ways to use technologies that we are still learning about. I'm excited to see in the coming weeks how my newfound conscious of this process might shape my views in the coming weeks as I learn the forms digital archaeology takes when the data takes one of its "finalized" forms through being interpreted and communicated to a larger audience.
+Fundamentally, although what I was considering at the end of module 1 segued well into module 2, what I believe the implications for "doing" digital archaeology have of coursed now changed. "Doing" this form of work requires a shift in mindset that I haven't experience elsewhere and that I now realize I must continue to work at expanding-- critical thought and consideration for not only the topic but the tools being used to analyze it must be thought about as a part of every step when collecting data and attempting to find the hidden patterns within. The practice of "slow archaeology" as introduced in the Wilkins article is essential for this to allow for interpretation throughout the continuously present pipeline model of archaeological knowledge creation. When one focuses too heavily on the aspects of digital collection, processing what is collected, and how this will be outputted rather than what can be interpreted from each of these steps, patterns can be found yet they become less meaningful without such critical thought behind the discovery. In his article, [Huggett](https://intarch.ac.uk/journal/issue44/7/index.html) explains that "the ubiquity of digital devices within archaeology makes it important to study and understand their integration into archaeological practice," and this, in particular, aligns itself with my concluding thoughts this week. His proposed concept of cognitive artefacts speak to my original discussion on the agency and power which the archaeologist holds over the data they collect and create, yet it also flows into my newfound understandings of how the digital ecosystem being formed in the field of archaeology impacts our findings as we seek new ways to use technologies that we are still learning about. I'm excited to see how my newfound consciousness of this process might shape my views in the coming weeks as I learn the forms digital archaeology takes when the data takes one of its "finalized" forms through being interpreted and communicated to a larger audience.
