note about gpt-2

--- a/content/post/2020-12-16-week-12.md
+++ b/content/post/2020-12-16-week-12.md
@@ -22,4 +22,6 @@ Both video games and augmented realities are excellent ways to immerse people in
 
 All of this rumination on both my own failures and the failures within the works I've read and interacted with came as a result of my realization in Module 2 regarding "slow archaeology"-- the necessity of creating an expectation and allowing for time to reflect on the work being done during each step of the process. I began this course seeing the "manual" work of digital archaeology-- cleaning data, programming, even crafting the final digital output of my research-- as a means to an end. Although notes were taken and I acknowledged that the choices I made during this initial process would affect the outcome of my work, reflection and think came *after* my data was neatly assembled in front of me, tidy and ready to read. But there are truths in the messy details, and recognizing and applying this concept to my work for the final half of this course has been my greatest win perhaps in the entirety of my approximately two years of working in the field of digital humanities. I've had my hypotheses proven at least slightly wrong for every activity I've done over these last few weeks, and this has allowed me to engage more meaningfully with the results of my work; [my assumptions about Fabricius](https://hist-digitized.netlify.app/post/2020-11-29-week-10/) led to me being more aware of the struggles I faced while using it and how this could affect the communities the tool was built for, [my assumptions about working with ADS] resulted in exploring the database further and learning about the ways metadata can be used but also where it may fail. Despite all of this reflection certainly resulting in me working a bit slower-- truly, it *is* **slow** archaeology-- my work now has more depth and allows more space for connection to it in other ways. Reflected in my separation of the technical from the contemplative was also an effort to separate my academic work from my emotions. Evidently, [right from week two of the course](https://hist-digitized.netlify.app/post/2020-09-28-week-2/) I failed to do this when it came to studying the subject of mortuary archaeology; cemeteries are home to a host of cultural superstition and heavy emotions that fundamentally tie into the work produced when studying them. [Baxter's article](https://digiarch.netlify.app/data/Baxter_chp_Archaeologies_of_the_Heart.pdf) helped me realize that in trying to do away with my feelings in order to achieve the objectivity that I was taught I should have, I was limiting the potential of my work and even denying the humanity of those who existed in the past that now existed in the liminal space of the cemetery I was to survey. In these past weeks, I was further influenced by the discussion of heart-centred archaeology in [Hodgetts & Kelvin's article](https://digiarch.netlify.app/data/hodgetts-kelvin.pdf), their article being the turning point of me actively choosing to integrate this practice in my posts by looking back at the details of my experience in the community collecting data for our graveyard project, and also allowing emotion to weave into my more "academic" thoughts. Centrally, this semester I learned that just because the work I'm doing is *digital* humanities, does not mean it needs to be robotic-- the humanities element should not be understated, separated, or overtaken by the technologies we use, but rather, used to enhance it.
 
+Now, there's no smooth jazz to close this semester but rather, [what does a fake Chantal have to say in her consolidation documents](https://github.com/ChantalMB/digiarch-final-week/blob/master/fakeChantal.md)? Please enjoy the results of me training a model with the contents of this blog using GPT-2, featuring horrors such as the "reproductive cemetery" and Cecilia Beaux, a 19th century painter turned broke digital archaeologist.
+
 <sup>1</sup> Header image created using all photos featured on this blog thus far via [Imj](http://www.zachwhalen.net/pg/imj/)
