--- a/content/post/2020-12-16-week-12.md
+++ b/content/post/2020-12-16-week-12.md
@@ -24,4 +24,8 @@ All of this rumination on both my own failures and the failures within the works
 
 Now, there's no smooth jazz to close this semester but rather, [what does a fake Chantal have to say in her consolidation documents](https://github.com/ChantalMB/digiarch-final-week/blob/master/fakeChantal.md)? Please enjoy the results of me training a model with the contents of this blog using GPT-2, featuring horrors such as the "reproductive cemetery" and Cecilia Beaux, a 19th century painter turned broke digital archaeologist.
 
+
+<iframe src="https://chantalmb.github.io/urban-spoon/" frameborder="0" width="100%" height="1300"></iframe>
+
+
 <sup>1</sup> Header image created using all photos featured on this blog thus far via [Imj](http://www.zachwhalen.net/pg/imj/)
